objects/Gc_Log__c.object
<CustomObject>
    <description>This is a log that is used by batch processes and other parts of the system when errors or significant events occur</description>
    <fields>
        <fullName>Datetime__c</fullName>
        <description>Ths date and time that the log was raised</description>
        <inlineHelpText>Ths date and time that the log was raised</inlineHelpText>
        <label>Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether an email was sent for this log</description>
        <inlineHelpText>Indicates whether an email was sent for this log</inlineHelpText>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <description>This is the type of error that occurred</description>
        <inlineHelpText>This is the type of error that occurred</inlineHelpText>
        <label>Error Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Full_Message__c</fullName>
        <description>This is the full log message</description>
        <inlineHelpText>This is the full log message</inlineHelpText>
        <label>Full Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Log_Level__c</fullName>
        <description>This is used to indicate if this log is just information or errors</description>
        <label>Log Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Log_Setting_Name__c</fullName>
        <description>This is the setting name that created this log. This can be used to group settings together for different operations</description>
        <inlineHelpText>This is the setting name that created this log. This can be used to group settings together for different operations</inlineHelpText>
        <label>Log Setting Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Id__c</fullName>
        <description>This is the ID of the object that returned the error if that is known</description>
        <inlineHelpText>This is the ID of the object that returned the error if that is known</inlineHelpText>
        <label>Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>The name of the object if it is known</description>
        <inlineHelpText>The name of the object if it is known</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <description>A stack trace from the error if that is available</description>
        <inlineHelpText>A stack trace from the error if that is available</inlineHelpText>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>A short description of the log</description>
        <inlineHelpText>A short description of the log</inlineHelpText>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Summary_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup specifically for the summar6y batch process so that logs can be linked back to the summary (UUK-910)</description>
        <inlineHelpText>This is a lookup specifically for the summar6y batch process so that logs can be linked back to the summary</inlineHelpText>
        <label>Transaction Summary Header</label>
        <referenceTo>Transaction_Summary_Header__c</referenceTo>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Log</label>
    <nameField>
        <displayFormat>LOG-{0000000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>